--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,9 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <%- content %>
+    <div class="container-fluid">
+      <%- content %>
+    </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
